Change logging level for com.kai.eraport to DEBUG

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ logging.level.org.springdoc=INFO
 logging.level.org.hibernate.orm.connections.pooling=OFF
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.com.exceisa.cmsmdw=DEBUG
+logging.level.com.kai.eraport=DEBUG
 
 # Format log agar lebih berwarna di terminal
 logging.pattern.console=%clr(%d{HH:mm:ss.SSS}){blue} %clr(%-5level){yellow} %clr([%t]){magenta} %clr(%logger{36}){cyan} - %msg%n
